重构 bug 模块，删除未使用的文件
